--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next",
+    "dev": "cross-env NODE_ENV=dev nodemon app.js",
+    "prd": "pm2 start pm2.conf.json",
     "build": "next build",
     "start": "next start",
     "server": "nodemon index.js"
@@ -22,6 +23,7 @@
     "next": "^9.1.6",
     "nodemon": "^2.0.2",
     "pg": "^7.15.0",
+    "pm2": "^4.2.1",
     "qiniu": "^7.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
